--- a/index.html
+++ b/index.html
@@ -110,235 +110,7 @@
 		<section class="col-lg-2 col-md-12 col-sm-12 col-xs-12"> 
 			<h2 id="message"></h2>
 		</section>
-	</div> 
-	
-
-	<script>
-		var slot_0 = ['','','','','','']; 
-		var slot_1 = ['','','','','','']; 
-		var slot_2 = ['','','','','','']; 
-		var slot_3 = ['','','','','','']; 
-		var slot_4 = ['','','','','','']; 
-		var slot_5 = ['','','','','','']; 
-		var slot_6 = ['','','','','','']; 
-		var grid = [slot_0, slot_1, slot_2, slot_3, slot_4, slot_5, slot_6]; 
-		var COLUMN_LENGTH = 6; 
-		var players = ["R", "B"]; 
- 		var current_player = players[0];
- 		var turn = 1;
- 		var local_play = true;
- 		document.getElementById("local_play").style.background = "gold";
- 		var random_ai = false;
-		document.getElementById("board").style.cursor = "url(images/red_chip.png) 16 16, auto";
-
-		function open_bot_list(){
-			document.getElementById("bots_list").style.display = "block";
-		}
-
-		function two_players(){
-			document.getElementById("local_play").style.background = "gold";
-			document.getElementById("bots").style.background = "#5959FF";
-			document.getElementById("random_bot").style.background = "#5959FF";
-			local_play = true;
-			random_ai = false; 
-			document.getElementById("bots_list").style.display = "none";
-		}
-		
-		function random_ai_bot(){ 
-			document.getElementById("bots").style.background = "gold";
-			document.getElementById("random_bot").style.background = "gold";
-			document.getElementById("local_play").style.background = "#5959FF";
-			random_ai = true;
-			local_play = false; 
-			document.getElementById("bots_list").style.display = "none";
-		}
-
- 		function reset(){
- 			slot_0 = ['','','','','','']; 
-			slot_1 = ['','','','','','']; 
-			slot_2 = ['','','','','','']; 
-			slot_3 = ['','','','','','']; 
-			slot_4 = ['','','','','','']; 
-			slot_5 = ['','','','','','']; 
-			slot_6 = ['','','','','','']; 
-			grid = [slot_0, slot_1, slot_2, slot_3, slot_4, slot_5, slot_6]; 
-			COLUMN_LENGTH = 6; 
-			players = ["R", "B"]; 
-	 		current_player = players[0];
-	 		turn = 1;
-	 		document.getElementById("board").style.cursor = "url(images/red_chip.png) 16 16, auto";
-	 		document.getElementById('message').innerHTML = "";
-	 		document.getElementById('message').style.display = "none"; 
-	 		document.getElementById('slots').innerHTML = "<tbody><tr><td id='slot0_row0'><div class='white chip'></div></td><td id='slot1_row0'><div class='white chip'></div></td><td id='slot2_row0'><div class='white chip'></div></td><td id='slot3_row0'><div class='white chip'></div></td><td id='slot4_row0'><div class='white chip'></div></td><td id='slot5_row0'><div class='white chip'></div></td><td id='slot6_row0'><div class='white chip'></div></td></tr><tr><td id='slot0_row1'><div class='white chip'></div></td><td id='slot1_row1'><div class='white chip'></div></td><td id='slot2_row1'><div class='white chip'></div></td><td id='slot3_row1'><div class='white chip'></div></td><td id='slot4_row1'><div class='white chip'></div></td><td id='slot5_row1'><div class='white chip'></div></td><td id='slot6_row1'><div class='white chip'></div></td></tr><tr><td id='slot0_row2'><div class='white chip'></div></td><td id='slot1_row2'><div class='white chip'></div></td><td id='slot2_row2'><div class='white chip'></div></td><td id='slot3_row2'><div class='white chip'></div></td><td id='slot4_row2'><div class='white chip'></div></td><td id='slot5_row2'><div class='white chip'></div></td><td id='slot6_row2'><div class='white chip'></div></td></tr><tr><td id='slot0_row3'><div class='white chip'></div></td><td id='slot1_row3'><div class='white chip'></div></td><td id='slot2_row3'><div class='white chip'></div></td><td id='slot3_row3'><div class='white chip'></div></td><td id='slot4_row3'><div class='white chip'></div></td><td id='slot5_row3'><div class='white chip'></div></td><td id='slot6_row3'><div class='white chip'></div></td></tr><tr><td id='slot0_row4'><div class='white chip'></div></td><td id='slot1_row4'><div class='white chip'></div></td><td id='slot2_row4'><div class='white chip'></div></td><td id='slot3_row4'><div class='white chip'></div></td><td id='slot4_row4'><div class='white chip'></div></td><td id='slot5_row4'><div class='white chip'></div></td><td id='slot6_row4'><div class='white chip'></div></td></tr><tr><td id='slot0_row5'><div class='white chip'></div></td><td id='slot1_row5'><div class='white chip'></div></td><td id='slot2_row5'><div class='white chip'></div></td><td id='slot3_row5'><div class='white chip'></div></td><td id='slot4_row5'><div class='white chip'></div></td><td id='slot5_row5'><div class='white chip'></div></td><td id='slot6_row5'><div class='white chip'></div></td></tr></tbody>";
-	 		enable_insert();
-	 		two_players();
- 		}
- 
-		function insert (slot_number) { 
-			if(!slot_filled(slot_number)){
-				disable_insert();
-			}
-			for(var row_number = COLUMN_LENGTH; row_number > -1; row_number--){
-				if(grid[slot_number][row_number] == ''){
-					grid[slot_number][row_number] = current_player;
-					var location = "slot" + slot_number + "_row" + row_number;  
-
-					display_chip(current_player, location);
-					if(turn > 6){
-						if(check_win_condition(current_player)){
-							random_ai = false;
-							local_play = false;
-							wins(current_player); 
-						}
-					} 
-					if(random_ai){
-						setTimeout(function() {
-							next(current_player); 
-							random_move();
-							enable_insert();
-						}, 200);	
-					}
-					else if(local_play){ 
-						setTimeout(function() {
-							next(current_player);   
-							enable_insert();
-						}, 100);
-					}
-					break;
-				}
-			}  
-		}  
-
-		function random_move(){
-			var random_slot = Math.floor(Math.random()*7); 
-			if(slot_filled(random_slot)){
-				random_move();
-			}
-			for(var row_number = COLUMN_LENGTH; row_number > -1; row_number--){
-				if(grid[random_slot][row_number] == ''){
-					grid[random_slot][row_number] = current_player;
-					var location = "slot" + random_slot + "_row" + row_number;  
-					display_chip(current_player, location);
-					if(turn > 6){
-						if(check_win_condition(current_player)){
-							wins(current_player); 
-						}
-					} 
-					next(current_player);   
-					break;
-				}
-			}
-		}
-
-		function slot_filled(slot){
-			if(grid[slot][0] != ''){
-				return true;
-			}else{
-				return false;
-			}
-		}
-
-		function check_win_condition(player) { 
-			var horizontal_grid = [ 
-		 		[slot_0[0], slot_1[0], slot_2[0], slot_3[0], slot_4[0], slot_5[0], slot_6[0]],
-		 		[slot_0[1], slot_1[1], slot_2[1], slot_3[1], slot_4[1], slot_5[1], slot_6[1]], 
-		 		[slot_0[2], slot_1[2], slot_2[2], slot_3[2], slot_4[2], slot_5[2], slot_6[2]], 
-		 		[slot_0[3], slot_1[3], slot_2[3], slot_3[3], slot_4[3], slot_5[3], slot_6[3]], 
-		 		[slot_0[4], slot_1[4], slot_2[4], slot_3[4], slot_4[4], slot_5[4], slot_6[4]], 
-		 		[slot_0[5], slot_1[5], slot_2[5], slot_3[5], slot_4[5], slot_5[5], slot_6[5]] 
-	 		] 
-	 		var diagonal_grid_1 = [ 
-	 			[slot_3[0], slot_2[1], slot_1[2], slot_0[3]],
-	 			[slot_4[0], slot_3[1], slot_2[2], slot_1[3], slot_0[4]],
-	 			[slot_5[0], slot_4[1], slot_3[2], slot_2[3], slot_1[4], slot_0[5]],
-	 			[slot_6[0], slot_5[1], slot_4[2], slot_3[3], slot_2[4], slot_1[5]],
-	 			[slot_6[1], slot_5[2], slot_4[3], slot_3[4], slot_2[5]],
-	 			[slot_6[2], slot_5[3], slot_4[4], slot_3[5]] 
-	 		]
-
-	 		var diagonal_grid_2 = [ 
-	 			[slot_0[2], slot_1[3], slot_2[4], slot_3[5]],
-	 			[slot_0[1], slot_1[2], slot_2[3], slot_3[4], slot_4[5]],
-	 			[slot_0[0], slot_1[1], slot_2[2], slot_3[3], slot_4[4], slot_5[5]],
-	 			[slot_1[0], slot_2[1], slot_3[2], slot_4[3], slot_5[4], slot_6[5]],
-	 			[slot_2[0], slot_3[1], slot_4[2], slot_5[3], slot_6[4]],
-	 			[slot_3[0], slot_4[1], slot_5[2], slot_6[3]] 
-	 		] 
-	 		if(data_cruncher(grid, player) || data_cruncher(horizontal_grid, player) || data_cruncher(diagonal_grid_1, player) || data_cruncher(diagonal_grid_2, player)){
-	 			return true;
-	 		} 
-	 		else{
-	 			return false;
-	 		} 
-	 	} 
-
-	 	function data_cruncher(two_dimentional_array, player){
-	 		var connect_four = 0; 
-	 		for(var slot = 0; slot < two_dimentional_array.length; slot++){ 
-	 			connect_four = 0;
-	 			for(var row = 0; row < two_dimentional_array[slot].length; row++){
-		 			if(two_dimentional_array[slot][row] != player){
-		 				connect_four = 0; 
-		 			}
-		 			else if(two_dimentional_array[slot][row] == player){ 
-		 				connect_four++; 
-		 				if(connect_four >= 4){ 
-		 					return true;
-		 				} 
-		 			} 
-		 		}
-	 		}
-	 		return false;
-	 	}
-
-		function display_chip(player, location){
-			if(player == 'R'){
-				document.getElementById(location).innerHTML = "<div class='red chip'></div>";  
-			}
-			else if(player == 'B'){
-				document.getElementById(location).innerHTML = "<div class='black chip'></div>";  
-			}
-		}
-
-		function next(player){
-			turn++; 
-			if(player == 'R'){
-				current_player = players[1];  
-				document.getElementById("board").style.cursor = "url(images/black_chip.png) 16 16, auto";
-			}
-			else if(player == 'B'){
-				current_player = players[0];   
-				document.getElementById("board").style.cursor = "url(images/red_chip.png) 16 16, auto";
-			} 
-			if(turn > 42){  
-				document.getElementById('message').innerHTML = "TIE!<br><button onclick='reset()'>reset</button>";
-			}
-		}
-
-		function wins(player){
-			document.getElementById('message').style.display = "block";
-			if(player == 'R'){ 
-				document.getElementById('message').innerHTML = "RED WINS!!<br><br><div class='reset' onclick='reset()'>reset</div>";  
-			}
-			else if(player == 'B'){
-				document.getElementById('message').innerHTML = "BLACK WINS!!<br><br><div class='reset' onclick='reset()'>reset</div>"; 
-			} 
-			disable_insert(); 
-		} 
-
-		function enable_insert(){
- 			var buttons = document.getElementsByClassName('insert'); 
-	 		for(var button = 0; button < buttons.length; button++){
-	 			buttons[button].style.pointerEvents = 'auto';
-	 		} 
- 		}
-
-		function disable_insert(){
-			var buttons = document.getElementsByClassName('insert');  
-	 		for(var button = 0; button < buttons.length; button++){
-	 			buttons[button].style.pointerEvents = 'none';
-	 		} 
-		}
-	</script>
+	</div>  
+	<script src="js/app.min.js"></script>
 </body>
 </html>
